2011-08-02  Amruth Raj  <amruthraj@motorola.com>

        Custom cursors cause the WebProcess to crash
        https://bugs.webkit.org/show_bug.cgi?id=64802

        Reviewed by Martin Robinson.

        * WebCore.exp.in:

2011-08-02  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: _normalizeEventTypes (via console's monitorEvents) doesnt handle all events like 'search' and other atypical ones.
        https://bugs.webkit.org/show_bug.cgi?id=65468

        Reviewed by Yury Semikhatsky.

        * inspector/InjectedScriptSource.js:

2011-08-02  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: 404/errors should get a RED visual treatment so easier to identify.
        https://bugs.webkit.org/show_bug.cgi?id=65471

        Reviewed by Yury Semikhatsky.

        * inspector/front-end/NetworkPanel.js:
        (WebInspector.NetworkDataGridNode.prototype._refreshStatusCell):
        * inspector/front-end/networkLogView.css:
        (.network-error-cell):

2011-08-02  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: arrow is a pain to click in console. Drive-by selection reset fix.
        https://bugs.webkit.org/show_bug.cgi?id=65467

        Reviewed by Yury Semikhatsky.

        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleView.prototype._messagesClicked):
        * inspector/front-end/ObjectPropertiesSection.js:
        (WebInspector.ObjectPropertyTreeElement):
        * inspector/front-end/inspector.css:
        (.properties-tree li):
        (.properties-tree li.parent::before):
        * inspector/front-end/treeoutline.js:
        (TreeElement.treeElementToggled):

2011-08-01  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: button + "New style rule"
        https://bugs.webkit.org/show_bug.cgi?id=65409

        Reviewed by Yury Semikhatsky.

        Test: inspector/styles/styles-add-new-rule.html

        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylesSidebarPane):